objects/SP_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S&amp;P Partners</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contractors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Price_Sent__c</fullName>
        <label>Price Sent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>S&amp;P Partner</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Partner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>